<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/aviso"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/txt_no_ubicacion"
        android:textSize="18sp"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="#000"
        android:layout_marginBottom="18dp"/>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:background="#fff"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/cancelar"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnCrear"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:elevation="8dp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/crear"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="18sp"
            android:textColor="#fff" />


    </LinearLayout>

</LinearLayout>