<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_margin="20dp"
    android:padding="10dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/nueva_ubicacion"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="sans-serif-smallcaps"
        android:textColor="@color/colorPrimary"
        android:layout_marginBottom="10dp"
        />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilUbicacion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionNext"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/nombre_ubicacion"
        app:startIconDrawable="@drawable/ic_baseline_place_24"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/tilDescripcion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:imeOptions="actionNext"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
        android:hint="@string/descripcion"
        app:startIconDrawable="@drawable/ic_baseline_text_snippet_24"
        app:errorEnabled="false">

        <com.google.android.material.textfield.TextInputEditText
            android:layout_width="match_parent"
            android:textSize="18sp"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:layout_height="wrap_content"/>

    </com.google.android.material.textfield.TextInputLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:orientation="horizontal"
        android:layout_gravity="center"
        android:layout_height="wrap_content">

        <Button
            android:id="@+id/btnCancelar"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:background="#fff"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/cancelar"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="18sp"
            android:textColor="@color/colorPrimary" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardar"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:elevation="8dp"
            android:layout_width="0dp"
            android:layout_height="70dp"
            android:layout_weight="1"
            android:textStyle="bold"
            android:text="@string/guardar"
            android:fontFamily="sans-serif-smallcaps"
            android:textSize="18sp"
            android:textColor="#fff" />


    </LinearLayout>

</LinearLayout>