<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?colorSwitchThumbNormal"
    tools:context=".ui.LoginActivity">


    <LinearLayout
        android:id="@+id/titulo_login"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content"
        android:layout_above="@id/linLogin"
        >

        <androidx.coordinatorlayout.widget.CoordinatorLayout
            android:id="@+id/image"
            android:layout_width="match_parent"
            android:layout_height="170dp"
            android:layout_gravity="center"
            >

            <ImageView
                android:id="@+id/imgTrazado"
                android:layout_width="650dp"
                android:layout_height="150dp"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/ic_trazado" />
            <TextView
                android:id="@+id/txtTitle"
                android:layout_marginTop="-30dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/inventario_offline"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:fontFamily="sans-serif-smallcaps"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="30sp"/>

            <TextView
                android:id="@+id/txt_subtitle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/wakeapp"
                android:fontFamily="sans-serif-smallcaps"
                android:textAlignment="center"
                android:textColor="@color/colorPrimary"
                android:textStyle="bold"
                android:layout_gravity="center_horizontal|center_vertical"
                android:textSize="20sp"/>
        </androidx.coordinatorlayout.widget.CoordinatorLayout>

        <include
            android:id="@+id/imgItems"
            layout="@layout/imagenes_login"/>
    </LinearLayout>


    <LinearLayout
        android:id="@+id/linLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="20dp"
        android:layout_alignParentBottom="true">

        <TextView
            android:id="@+id/txtLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/iniciar_sesion"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="@dimen/text_title"/>

        <TextView
            android:id="@+id/txt_SubLogin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ingrese_sus_credenciales"
            android:textStyle="bold"
            android:textSize="@dimen/text_normal"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#83512DA8"
            android:layout_marginBottom="10dp"/>

        <LinearLayout
            android:id="@+id/form_ingreso"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edUsuario"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                android:imeOptions="actionNext"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/usuario"
                app:startIconDrawable="@drawable/ic_baseline_person_24"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:imeOptions="actionNext"
                    android:inputType="textPersonName"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edContrasena"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_normal"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:hint="@string/contrasena"
                app:startIconDrawable="@drawable/ic_baseline_lock_24"
                app:endIconMode="password_toggle"
                app:errorEnabled="false">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:inputType="textPassword"
                    android:lines="1"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>




        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnIngresar"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:textAppearance="@style/TextAppearance.MaterialComponents.Button"
            android:elevation="8dp"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="15dp"
            android:layout_marginBottom="32dp"
            android:textStyle="bold"
            android:text="@string/ingresar"
            android:textSize="20sp"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#fff" />

        <TextView
            android:id="@+id/recuperar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_gravity="center"
            android:text="@string/recuperar_contrasena"
            android:textStyle="bold"
            android:fontFamily="sans-serif-smallcaps"
            android:textColor="#83512DA8"/>

    </LinearLayout>

</RelativeLayout>